--- a/Strings/AppResources.de.resx
+++ b/Strings/AppResources.de.resx
@@ -2657,220 +2657,274 @@
     <value>FLUGZEUG WECHSELN</value>
   </data>
   <data name="FlightFreeControl.ImageNotFoundUpper" xml:space="preserve">
-      <value>BILD NICHT GEFUNDEN</value>
+    <value>BILD NICHT GEFUNDEN</value>
   </data>
   <data name="FlightFreeControl.NewFlightUpper" xml:space="preserve">
-      <value>NEUER FLUG</value>
+    <value>NEUER FLUG</value>
   </data>
   <data name="FlightFreeControl.UnavailableUpper" xml:space="preserve">
-      <value>NICHT VERFÜGBAR</value>
+    <value>NICHT VERFÜGBAR</value>
   </data>
   <data name="FlightFreeControl.WeatherUpper" xml:space="preserve">
-      <value>WETTER</value>
+    <value>WETTER</value>
   </data>
   <data name="FlightMenu.AltimeterUpper" xml:space="preserve">
-      <value>HÖHENMESSER</value>
+    <value>HÖHENMESSER</value>
   </data>
   <data name="FlightMenu.ApproxDurationUpper" xml:space="preserve">
-      <value>CA. DAUER</value>
+    <value>CA. DAUER</value>
   </data>
   <data name="FlightMenu.CloudsUpper" xml:space="preserve">
-      <value>WOLKEN</value>
+    <value>WOLKEN</value>
   </data>
   <data name="FlightMenu.DistanceUpper" xml:space="preserve">
-      <value>ENTFERNUNG</value>
+    <value>ENTFERNUNG</value>
   </data>
   <data name="FlightMenu.FlightSchoolDescription" xml:space="preserve">
-      <value>Meistere deine Flugfähigkeiten mit interaktiven Tutorials</value>
+    <value>Meistere deine Flugfähigkeiten mit interaktiven Tutorials</value>
   </data>
   <data name="FlightMenu.FlightSchoolUpper" xml:space="preserve">
-      <value>FLUGSCHULE</value>
+    <value>FLUGSCHULE</value>
   </data>
   <data name="FlightMenu.FreeFlightDescription" xml:space="preserve">
-      <value>Wähle dein Flugzeug und deinen Flughafen, passe deinen Flugplan an und genieße ein immersives Flugerlebnis in deinem eigenen Tempo</value>
+    <value>Wähle dein Flugzeug und deinen Flughafen, passe deinen Flugplan an und genieße ein immersives Flugerlebnis in deinem eigenen Tempo</value>
   </data>
   <data name="FlightMenu.FreeFlightUpper" xml:space="preserve">
-      <value>FREIER FLUG</value>
+    <value>FREIER FLUG</value>
   </data>
   <data name="FlightMenu.GenericFlightUpper" xml:space="preserve">
-      <value>ALLGEMEINER FLUG</value>
+    <value>ALLGEMEINER FLUG</value>
   </data>
   <data name="FlightMenu.LatestMetarUpper" xml:space="preserve">
-      <value>NEUESTE METAR</value>
+    <value>NEUESTE METAR</value>
   </data>
   <data name="FlightMenu.MissionsDescription" xml:space="preserve">
-      <value>Spring direkt ins Geschehen mit empfohlenen Airline- und Charterrouten basierend auf Verkehr und Fluglotsen</value>
+    <value>Spring direkt ins Geschehen mit empfohlenen Airline- und Charterrouten basierend auf Verkehr und Fluglotsen</value>
   </data>
   <data name="FlightMenu.MissionsUpper" xml:space="preserve">
-      <value>AUFGABEN</value>
+    <value>AUFGABEN</value>
   </data>
   <data name="FlightMenu.ParkingUpper" xml:space="preserve">
-      <value>PARKPLATZ</value>
+    <value>PARKPLATZ</value>
   </data>
   <data name="FlightMenu.TemperatureUpper" xml:space="preserve">
-      <value>TEMPERATUR</value>
+    <value>TEMPERATUR</value>
   </data>
   <data name="FlightMenu.TimeUpper" xml:space="preserve">
-      <value>ZEIT</value>
+    <value>ZEIT</value>
   </data>
   <data name="FlightMenu.TypeUpper" xml:space="preserve">
-      <value>TYP</value>
+    <value>TYP</value>
   </data>
   <data name="FlightMenu.VisibilityUpper" xml:space="preserve">
-      <value>SICHTWEITE</value>
+    <value>SICHTWEITE</value>
   </data>
   <data name="FlightMenu.Wind" xml:space="preserve">
-      <value>{0:#000}° bei {1} kt</value>
-      <comment>{0:#000}° bei {1} kt</comment>
+    <value>{0:#000}° bei {1} kt</value>
+    <comment>{0:#000}° bei {1} kt</comment>
   </data>
   <data name="FlightMenu.WindCalm" xml:space="preserve">
-      <value>Windstill</value>
+    <value>Windstill</value>
   </data>
   <data name="FlightMenu.WindUpper" xml:space="preserve">
-      <value>WIND</value>
+    <value>WIND</value>
   </data>
   <data name="FlightMenu.WindWithGust" xml:space="preserve">
-      <value>{0:#000}° bei {1} - {2} kt</value>
+    <value>{0:#000}° bei {1} - {2} kt</value>
   </data>
   <data name="FlightMenu.WorldUpper" xml:space="preserve">
-      <value>WELT</value>
+    <value>WELT</value>
   </data>
   <data name="FlightMissionControl.LongHaulUpper" xml:space="preserve">
-      <value>LANGSTRECKE</value>
+    <value>LANGSTRECKE</value>
   </data>
   <data name="FlightMissionControl.MediumHaulUpper" xml:space="preserve">
-      <value>MITTELSTRECKE</value>
+    <value>MITTELSTRECKE</value>
   </data>
   <data name="FlightMissionControl.NoMissionsFoundUpper" xml:space="preserve">
-      <value>KEINE AUFGABEN GEFUNDEN</value>
+    <value>KEINE AUFGABEN GEFUNDEN</value>
   </data>
   <data name="FlightMissionControl.ShortHaulUpper" xml:space="preserve">
-      <value>KURZSTRECKE</value>
+    <value>KURZSTRECKE</value>
   </data>
   <data name="FlightMissionControl.UltraLongHaulUpper" xml:space="preserve">
-      <value>ULTRALANGSTRECKE</value>
+    <value>ULTRALANGSTRECKE</value>
   </data>
   <data name="FlightSchoolControl.AircraftUpper" xml:space="preserve">
-      <value>FLUGZEUG</value>
+    <value>FLUGZEUG</value>
   </data>
   <data name="FlightSchoolControl.NoEntrySelected" xml:space="preserve">
-      <value>KEIN EINTRAG AUSGEWÄHLT</value>
+    <value>KEIN EINTRAG AUSGEWÄHLT</value>
   </data>
   <data name="FlightSchoolControl.NoLessonsFoundUpper" xml:space="preserve">
-      <value>KEINE LERNINHALTE GEFUNDEN</value>
+    <value>KEINE LERNINHALTE GEFUNDEN</value>
   </data>
   <data name="Global.NotApplicable" xml:space="preserve">
-      <value>N/A</value>
+    <value>N/A</value>
   </data>
   <data name="LogbookControl.AircraftUpper" xml:space="preserve">
-      <value>FLUGZEUG</value>
+    <value>FLUGZEUG</value>
   </data>
   <data name="LogbookControl.AllUpper" xml:space="preserve">
-      <value>ALLE</value>
+    <value>ALLE</value>
   </data>
   <data name="LogbookControl.AtcUpper" xml:space="preserve">
-      <value>ATC</value>
+    <value>ATC</value>
   </data>
   <data name="LogbookControl.DistanceUpper" xml:space="preserve">
-      <value>ENTFERNUNG</value>
+    <value>ENTFERNUNG</value>
   </data>
   <data name="LogbookControl.DurationUpper" xml:space="preserve">
-      <value>DAUER</value>
+    <value>DAUER</value>
   </data>
   <data name="LogbookControl.ExportErrorMessage" xml:space="preserve">
-      <value>Fehler beim Exportieren der Wiedergabedatei. Überprüfe, ob genügend Speicherplatz vorhanden ist.</value>
+    <value>Fehler beim Exportieren der Wiedergabedatei. Überprüfe, ob genügend Speicherplatz vorhanden ist.</value>
   </data>
   <data name="LogbookControl.ExportingUpper" xml:space="preserve">
-      <value>EXPORTIERE</value>
+    <value>EXPORTIERE</value>
   </data>
   <data name="LogbookControl.FileSizeUpper" xml:space="preserve">
-      <value>DATEIGRÖSSE</value>
+    <value>DATEIGRÖSSE</value>
   </data>
   <data name="LogbookControl.MultiplayerUpper" xml:space="preserve">
-      <value>MEHRSPIELER</value>
+    <value>MEHRSPIELER</value>
   </data>
   <data name="LogbookControl.NoEntrySelected" xml:space="preserve">
-      <value>KEIN EINTRAG AUSGEWÄHLT</value>
+    <value>KEIN EINTRAG AUSGEWÄHLT</value>
   </data>
   <data name="LogbookControl.NoItemsFound" xml:space="preserve">
-      <value>KEINE EINTRÄGE GEFUNDEN</value>
+    <value>KEINE EINTRÄGE GEFUNDEN</value>
   </data>
   <data name="LogbookControl.OnlyReplaysUpper" xml:space="preserve">
-      <value>NUR WIEDERGABEN</value>
+    <value>NUR WIEDERGABEN</value>
   </data>
   <data name="LogbookControl.ServerUpper" xml:space="preserve">
-      <value>SERVER</value>
+    <value>SERVER</value>
   </data>
   <data name="LogbookControl.SoloUpper" xml:space="preserve">
-      <value>SOLO</value>
+    <value>SOLO</value>
   </data>
   <data name="LogbookControl.XpEarnedUpper" xml:space="preserve">
-      <value>XP VERDIENT</value>
+    <value>XP VERDIENT</value>
   </data>
   <data name="LogbookControl.YourLogbook" xml:space="preserve">
-      <value>DEIN LOGBUCH</value>
+    <value>DEIN LOGBUCH</value>
   </data>
   <data name="LoginSubscriptionPage.Pricing12Months" xml:space="preserve">
-      <value>{0} / 12 Monate</value>
+    <value>{0} / 12 Monate</value>
   </data>
   <data name="LoginSubscriptionPage.Pricing6Months" xml:space="preserve">
-      <value>{0} / 6 Monate</value>
+    <value>{0} / 6 Monate</value>
   </data>
   <data name="MainMenuPage.AirTrafficControlUpper" xml:space="preserve">
-      <value>FLUGVERKEHRSKONTROLLE</value>
+    <value>FLUGVERKEHRSKONTROLLE</value>
   </data>
   <data name="MainMenuPage.ControlButtonUpper" xml:space="preserve">
-      <value>KONTROLLE</value>
+    <value>KONTROLLE</value>
   </data>
   <data name="MainMenuPage.FlightUpper" xml:space="preserve">
-      <value>FLUG</value>
+    <value>FLUG</value>
   </data>
   <data name="MainMenuPage.FlyButtonUpper" xml:space="preserve">
-      <value>FLIEGEN</value>
+    <value>FLIEGEN</value>
   </data>
   <data name="MainMenuPage.OpenButtonUpper" xml:space="preserve">
-      <value>ÖFFNEN</value>
+    <value>ÖFFNEN</value>
   </data>
   <data name="MainMenuPage.ReplayButtonUpper" xml:space="preserve">
-      <value>WIEDERGABE</value>
+    <value>WIEDERGABE</value>
   </data>
   <data name="MainMenuPage.UnableToPlayReplay" xml:space="preserve">
-      <value>Kann die Wiedergabedatei nicht abspielen</value>
+    <value>Kann die Wiedergabedatei nicht abspielen</value>
   </data>
   <data name="MenuAtcControl.ChangeAirportUpper" xml:space="preserve">
-      <value>FLUGHAFEN WECHSELN</value>
+    <value>FLUGHAFEN WECHSELN</value>
   </data>
   <data name="MenuAtcControl.Duration" xml:space="preserve">
-      <value>DAUER</value>
+    <value>DAUER</value>
   </data>
   <data name="MenuAtcControl.Frequencies" xml:space="preserve">
-      <value>FREQUENZEN</value>
+    <value>FREQUENZEN</value>
   </data>
   <data name="MenuAtcControl.MultipleFrequencies" xml:space="preserve">
-      <value>MEHRERE FREQUENZEN</value>
+    <value>MEHRERE FREQUENZEN</value>
   </data>
   <data name="MenuAtcControl.NewAtcSessionUpper" xml:space="preserve">
-      <value>NEUE ATC-SESSION</value>
+    <value>NEUE ATC-SESSION</value>
   </data>
   <data name="MenuAtcControl.NoSessionsFoundUpper" xml:space="preserve">
-      <value>KEINE SESSIONS GEFUNDEN</value>
+    <value>KEINE SESSIONS GEFUNDEN</value>
   </data>
   <data name="MenuAtcControl.ResumeAtcSessionQuestion" xml:space="preserve">
-      <value>ATC-Sitzung fortsetzen?</value>
+    <value>ATC-Sitzung fortsetzen?</value>
   </data>
   <data name="MenuAtcControl.UnableToRestartUserNotSame" xml:space="preserve">
-      <value>Kann die Sitzung nicht neu starten, da sie nicht mit deinem Konto verknüpft ist</value>
+    <value>Kann die Sitzung nicht neu starten, da sie nicht mit deinem Konto verknüpft ist</value>
   </data>
   <data name="AircraftPage.ShowLegacyAircraft" xml:space="preserve">
-      <value>Zeige Flugzeuge aus älteren Versionen</value>
+    <value>Zeige Flugzeuge aus älteren Versionen</value>
   </data>
   <data name="World.SoloDescription" xml:space="preserve">
-      <value>Wähle dein eigenes Flugzeug und deine Route, teste deine Flugfähigkeiten und erkunde wunderschöne Landschaften ohne Regeln oder andere Piloten.</value>
+    <value>Wähle dein eigenes Flugzeug und deine Route, teste deine Flugfähigkeiten und erkunde wunderschöne Landschaften ohne Regeln oder andere Piloten.</value>
   </data>
   <data name="WarningMessageControl.TapToContinue" xml:space="preserve">
     <value>Weiter tippen, um fortzufahren</value>
   </data>
   <data name="Error.InvalidTimeSpan" xml:space="preserve">
-      <value>Die Start- und Endzeiten für diese Sitzung sind ungültig (Fehlercode {0})</value>
+    <value>Die Start- und Endzeiten für diese Sitzung sind ungültig (Fehlercode {0})</value>
+  </data>
+  <data name="DefaultMission.AfterLanding" xml:space="preserve">
+    <value>Willkommen in {0}. Fahre zum Parkplatz und schalte das Flugzeug ab, um diese Mission abzuschließen</value>
+  </data>
+  <data name="DefaultMission.Congratulation" xml:space="preserve">
+    <value>Glückwunsch zu deinem Flug nach {0}!
+Du kannst diese Sitzung beenden oder eine neue Reise zu einem anderen Ziel beginnen. Bis bald im Himmel von Infinite Flight!</value>
+  </data>
+  <data name="DefaultMission.Congratulation2" xml:space="preserve">
+    <value>Glückwunsch zu deinem Flug nach {0}!
+Du kannst diese Sitzung beenden oder eine neue Reise beginnen.</value>
+  </data>
+  <data name="DefaultMission.HaveAGoodFlight" xml:space="preserve">
+    <value>Guten Flug nach {0}</value>
+  </data>
+  <data name="DefaultMission.HaveAGoodFlightTaxi" xml:space="preserve">
+    <value>Du bist jetzt bereit zum Rollen, guten Flug nach {0}</value>
+  </data>
+  <data name="DefaultMission.MissionBriefWindow" xml:space="preserve">
+    <value>Dies ist dein Missionsbriefing-Fenster. Du kannst jederzeit hierher zurückkehren, um zu sehen, was du tun musst. Dieses Fenster kann durch Tippen auf die Schaltfläche "MISSION BRIEF" rechts ein- und ausgeblendet werden</value>
+  </data>
+  <data name="DefaultMission.PushbackEnd" xml:space="preserve">
+    <value>Das Pushback wurde gestoppt. Drücke "DETACH TUG" im Menü "GROUND SERVICES", um den Schlepper vom Flugzeug zu lösen</value>
+  </data>
+  <data name="DefaultMission.PushbackEndPrompt" xml:space="preserve">
+    <value>Wenn du fertig bist, drücke die "PUSH" Taste erneut zum Stoppen.</value>
+  </data>
+  <data name="DefaultMission.PushbackStart" xml:space="preserve">
+    <value>Jetzt, wo die Parkbremse gelöst ist, kannst du das Pushback starten, indem du einfach auf die "PUSH" Taste im "GROUND SERVICES" Menü tippst.</value>
+  </data>
+  <data name="DefaultMission.PushbackSteering" xml:space="preserve">
+    <value>Das Pushback hat begonnen, nutze den "RUD BRAKES" Regler unten rechts, um das Flugzeug in die gewünschte Richtung zu lenken.</value>
+  </data>
+  <data name="DefaultMission.ReadyForPushback" xml:space="preserve">
+    <value>Wir sind bereit für das Pushback, öffne das "GROUND SERVICES" Menü rechts, scrolle zum "PUSHBACK" Bereich und tippe auf "ATTACH TUG"</value>
+  </data>
+  <data name="DefaultMission.ReleaseBrakes" xml:space="preserve">
+    <value>Wenn du bereit für das Pushback bist, müssen die Parkbremsen durch Tippen auf die "PARK BRAKES" Schaltfläche unten links gelöst werden</value>
+  </data>
+  <data name="DefaultMission.StartEngine" xml:space="preserve">
+    <value>Wir können jetzt die Motoren starten, falls sie noch nicht gestartet sind. Öffne das "SYSTEMS" Menü rechts und tippe auf "AUTO START", um die Motoren zu starten und das Flugzeug fürs Rollen bereit zu machen</value>
+  </data>
+  <data name="DefaultMission.TapToContinue" xml:space="preserve">
+    <value>Tippe hier, um fortzufahren</value>
+  </data>
+  <data name="DefaultMission.Welcome" xml:space="preserve">
+    <value>Willkommen bei Infinite Flight! Tippe auf dieses Fenster, um zu beginnen und die Missionsbeschreibung und Anweisungen zu sehen</value>
+  </data>
+  <data name="DefaultMission.YourMissionBrief" xml:space="preserve">
+    <value>Deine heutige Mission ist:
+  {0}</value>
+  </data>
+  <data name="Mission.MissionBrief" xml:space="preserve">
+    <value>MISSIONSBRIEFING</value>
   </data>
 </root>
